--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx src/",
+    "lint:fix": "yarn lint --fix",
+    "type-check": "tsc -p ./tsconfig.json --skipLibCheck"
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4",
