--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -7,6 +7,11 @@ import com.android.build.OutputFile
  * This is the configuration block to customize your React Native Android app.
  * By default you don't need to apply any configuration, just uncomment the lines you need.
  */
+ project.ext.envConfigFiles = [
+  debug: "../.config/environments/.env"
+]
+apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
+
 react {
     /* Folders */
     //   The root of your project, i.e. where "package.json" lives. Default is '..'
