--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
       android:theme="@style/AppTheme">
       <meta-data
       android:name="com.google.android.geo.API_KEY"
-      android:value="AIzaSyC1ReAIgwwPr2IGljrTB4UFuwpybvR0OLk"/>
+      android:value="@string/GOOGLE_MAPS_API_KEY" />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
